fixed in profile section the stretching vertically of both cards to only one.

--- a/frontend/src/components/content/ProfileSection.module.css
+++ b/frontend/src/components/content/ProfileSection.module.css
@@ -12,6 +12,7 @@
   gap: 1.5rem;
   justify-content: center;
   width: 100%;
+  align-items: flex-start;
 }
 
 .table {
@@ -101,7 +102,7 @@
 }
 
 .row:first-of-type {
-  margin-top: auto;
+  margin-top: 1rem;
 }
 
 .editButton {
@@ -111,7 +112,7 @@
   border-radius: 5px;
   padding: 10px 25px;
   transition: background-color 0.3s ease;
-  margin-top: auto;
+  margin-top: 1rem;
   font-size: 1rem;
 }
 
@@ -139,14 +140,4 @@
 
 .bookNowButton:hover {
   background-color: var(--color-hover);
-}
-
-@media (max-width: 604px) {
-  .row:first-of-type {
-    margin-top: 1rem;
-  }
-
-  .editButton {
-    margin-top: 1rem;
-  }
 }
